header layout 추가 main content 수정

--- a/BR_LIS_Ver1/src/main/webapp/include/css/jungang/main.css
+++ b/BR_LIS_Ver1/src/main/webapp/include/css/jungang/main.css
@@ -9,7 +9,7 @@
 #wrap {background:url(../../image/jungang/common/bg_body.png) 0 0 repeat-x; position:relative}
 
 #btnSearchTop { display:none}
-#topmenu { margin-left:140px}
+#topmenu { margin:0 120px;}
 
 #contbodym {
 	width: 998px;
