--- a/BR_LIS_Ver1/src/main/webapp/hik_css/returnBookPage.css
+++ b/BR_LIS_Ver1/src/main/webapp/hik_css/returnBookPage.css
@@ -16,5 +16,38 @@ table{
 th,td{
 	border: 1px solid black;
 	
-	
+}
+
+.w-btn-outline {
+    position: relative;
+    padding: 15px 30px;
+    border-radius: 15px;
+    box-shadow: 0 15px 35px rgba(0, 0, 0, 0.2);
+    text-decoration: none;
+    font-weight: 600;
+    transition: 0.25s;
+}
+.w-btn-gray-outline {
+    border: 3px solid #a3a1a1;
+    color: #6e6e6e;
+}
+.w-btn-gray-outline:hover {
+    background-color: #a3a1a1;
+    color: #e3dede;
+}
+.w-btn-outline:hover {
+    letter-spacing: 2px;
+    transform: scale(1.2);
+    cursor: pointer;
+}
+
+.w-btn-outline:active {
+    transform: scale(1.5);
+}
+
+.buttons{
+	margin: 30px 200px 0 300px;
+}
+.buttons>button{
+	margin-right : 50px;
 }
