마이페이지 대출 목록 진행

--- a/BR_LIS_Ver1/src/main/webapp/hik_css/returnBookList.css
+++ b/BR_LIS_Ver1/src/main/webapp/hik_css/returnBookList.css
@@ -12,9 +12,8 @@
 	font-size : 8pt;
 }
 
-
-.paginate_button current{
-	color: yellowgreen;
-	border: 1px solid white;
-	background: pink; 
+#nmMessege{
+	float: right;
+	color: red;
+	font-size: 8pt;
 }
