BR_W_IM_131_viewAllCalendar BR_W_IM_132_viewDetailCalendar

--- a/BR_LIS_Ver1/src/main/webapp/WEB-INF/views/errorPage/500.html
+++ b/BR_LIS_Ver1/src/main/webapp/WEB-INF/views/errorPage/500.html
@@ -72,10 +72,9 @@ a:hover {
         <div class='eye'></div>
 
         <p class="sub-text">Oh eyeballs! Something went wrong. We're <span class="italic">looking</span> to see what happened.</p>
-        <a href="">Go back</a>
+        <a href="javascript:history.back();">Go back</a>
       </div>
     </div>
-</div>
 </body>
 <script type="text/javascript">
 $(".full-screen").mousemove(function(event) {
