home 페이지 도서관일정 작업

--- a/BR_LIS_Ver1/src/main/webapp/include/css/jungang/layout.css
+++ b/BR_LIS_Ver1/src/main/webapp/include/css/jungang/layout.css
@@ -64,8 +64,14 @@
 	z-index: 119;
 	left: 0;
 	top: 30px;
+	margin:0 auto; 
 	overflow: hidden;
 	height: 82px;
+	text-align: center;
+}
+#indexNavi > ul{
+	display:inline-block;
+	zoom:1;
 }
 #subvisuala {
 	position: absolute;
@@ -84,7 +90,8 @@
 	border-bottom: 1px solid #dfdfdf;
 }
 #topmenu {
-	float: left;
+/* 	float: right; */
+	text-align:center;
 	height: 81px;
 	padding: 0;
 	list-style: none;
@@ -93,6 +100,8 @@
 #topmenu > li {
 	float: left;
 	margin: 0;
+	margin-left:-1px;
+	z-index:1;
 	list-style: none;
 	position: relative;
 	min-width: 115px;
