--- a/BR_LIS_Ver1/src/main/webapp/include/css/jungang/layout.css
+++ b/BR_LIS_Ver1/src/main/webapp/include/css/jungang/layout.css
@@ -66,6 +66,21 @@
 	top: 30px;
 	overflow: hidden;
 	height: 82px;
+	text-align: center;
+}
+#indexNavi {
+	position: absolute;
+	z-index: 119;
+	left: 0;
+	top: 30px;
+	margin:0 auto; 
+	overflow: hidden;
+	height: 82px;
+	text-align: center;
+}
+#indexNavi > ul{
+	display:inline-block;
+	zoom:1;
 }
 #subvisuala {
 	position: absolute;
@@ -84,7 +99,7 @@
 	border-bottom: 1px solid #dfdfdf;
 }
 #topmenu {
-	float: left;
+/* 	float: left; */
 	height: 81px;
 	padding: 0;
 	list-style: none;
