--- a/BR_LIS_Ver1/src/main/webapp/hik_css/returnBookPage.css
+++ b/BR_LIS_Ver1/src/main/webapp/hik_css/returnBookPage.css
@@ -51,3 +51,15 @@ th,td{
 .buttons>button{
 	margin-right : 50px;
 }
+
+.book_serial{
+	width: 255px;
+}
+.book_serial_val{
+	text-align: center;
+	border: 1px solid black;
+	opacity: 50%;
+}
+#searchBook{
+	margin-bottom: 10px;
+}
