헤더 css 수정중 신청도서(한슬기)  css 수정완료

--- a/BR_LIS_Ver1/src/main/webapp/hik_css/myPageHIK.css
+++ b/BR_LIS_Ver1/src/main/webapp/hik_css/myPageHIK.css
@@ -71,4 +71,15 @@ a:not([href]):not([class]), a:not([href]):not([class]):hover {
 }
 #warning > p{
 	color: red;
+	margin-bottom: 0px;
+}
+
+#notion {
+	padding: 10px;
+	margin-top: 10px;
+	font-size: 12px;
+	border: 1px dashed #d63384;
+}
+#notion >b{
+	color:  #d63384;
 }
